--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>WestConsulting</title>
+  <title>West Consulting</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/logos/short_logo_favicon.gif">
 </head>
 <body>
   <app-root></app-root>
