--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/logos/short_logo_favicon.gif">
+  <link rel="icon" type="image/x-icon" href="assets/logos/short_logo_inverted.png">
 </head>
 <body>
   <app-root></app-root>
