Added Open Graph meta tags for nicer links/iMessages

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,11 @@
   <meta charset="utf-8">
   <title>West Consulting</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property="og:title" content="westc - Gothenburg based Solution Architect & Developer" />
+  <meta property="og:type" content="business.business">
+  <meta property="og:url" content="http://westc.se" />
+  <meta property="og:image" content="http://westc.se/assets/banners/sea.jpg" />
   <link rel="icon" type="image/x-icon" href="assets/logos/westc-circle.png">
 </head>
 <body>
