--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>West Consulting</title>
+  <title>Westc</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:title" content="westc - Gothenburg based Solution Architect & Developer" />
@@ -12,15 +12,15 @@
   <link rel="icon" type="image/x-icon" href="assets/logos/westc-circle.png">
 </head>
 <body>
-  <app-root></app-root>
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+<app-root></app-root>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-105576202-1', 'auto');
+  ga('create', 'UA-105576202-1', 'auto');
 
-  </script>
+</script>
 </body>
 </html>
